--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 <div class="col-1-of-2">
                     <p class="footer__copyright">
                         Built by <a href="#" class="footer__link">Jianyuan Chen</a>.
-                        Copyright &copy; by Jianyuan Chen. <br>You are 100% allowed to use this webpage for both personal and commercial use. <br>Design inspiration from Jona Schmedtmann.
+                        Copyright &copy; by Jianyuan Chen. <br>You are 100% allowed to use this webpage's content and source code for both personal and commercial use. <br>Credit to the author is greatly appreciated. <br>Design inspiration from Jona Schmedtmann.
                     </p>
                 </div>
             </div>
