--- a/index.html
+++ b/index.html
@@ -75,6 +75,6 @@
     <div id="root"></div>
     I'm html
     <!-- single page app in bundle.js -->
-    <script src="/porfolio/build/bundle.js"></script>
+    <script src="/build/bundle.js"></script>
   </body>
 </html>
